[tool.poetry]
name = "miway"
version = "0.1.0"
description = ""
authors = ["Diego Da Silva <luiz.diego5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
dash = "^2.14.2"
dash-leaflet = "^1.0.11"
dash-extensions = "^1.0.4"
dash-mantine-components = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
